# lib_fetch_a

./: CMakeLists.txt  README.md
src/: foo.cpp
